// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Item as Toggler should render a nav as a toggle component 1`] = `
<div
  className="nav-item-wrapper"
>
  <div
    className=""
  >
    <SmartLink
      activeClass="active"
      className="nav-item nav-item-link"
      isExternal={false}
      target="_self"
      url="#testPath"
    >
      <Arrange
        align="center"
        fill={
          <div
            className="nav-item-no-icon"
          >
            testIcon
          </div>
        }
        fitStart={null}
      />
    </SmartLink>
  </div>
</div>
`;

exports[`Nav Item should apply custom classes 1`] = `
<div
  className="nav-item-wrapper test-class"
>
  <div
    className=""
  >
    <SmartLink
      activeClass="active"
      className="nav-item nav-item-link"
      isExternal={false}
      target="_self"
      url="#testPath"
    >
      <Arrange
        align="center"
        fill={
          <div
            className="nav-item-no-icon"
          >
            testIcon
          </div>
        }
        fitStart={null}
      />
    </SmartLink>
  </div>
</div>
`;

exports[`Nav Item should render a default component 1`] = `
<div
  className="nav-item-wrapper"
>
  <div
    className=""
  >
    <SmartLink
      activeClass="active"
      className="nav-item nav-item-link"
      isExternal={false}
      target="_self"
      url="#testPath"
    >
      <Arrange
        align="center"
        fill={
          <div
            className="nav-item-no-icon"
          >
            testIcon
          </div>
        }
        fitStart={null}
      />
    </SmartLink>
  </div>
</div>
`;
